opam-version: "2.0"
name: "brotli"
version: "2.0.3"
maintainer: "Edgar Aroutiounian <edgar.factorial@gmail.com>"
authors: [ "Edgar Aroutiounian <edgar.factorial@gmail.com>" ]
license: "BSD-3-clause"
homepage: "http://hyegar.com/reasonml-brotli"
bug-reports: "https://github.com/fxfactorial/reasonml-brotli/issues"
dev-repo: "git://github.com/fxfactorial/reasonml-brotli.git"
tags: [ "clib:stdc" "clib:brotli"  ]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}]
]
post-messages:["Be sure to have libbrotli installed on your machine" {failure}]
depends: [
  "ocaml" {>= "4.04.0"}
  "dune" {>= "1.0"}
  "odoc" {build}
  "conf-brotli"
]
synopsis: "ReasonML bindings to the compression algorithm/code Brotli"
