(library
 (name brotli)
 (public_name brotli)
 (libraries unix)
 (c_names brotli_stubs)
 (c_flags -std=c++11 -x c++ -Wextra -fno-omit-frame-pointer -O2 -fno-optimize-sibling-calls (:include c_flags.sexp))
 (c_library_flags (:include c_library_flags.sexp) -lstdc++))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action (run ../config/discover.exe)))
